# article-scraper-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: db.py  exceptions.py  main.py
app/api/: articles.py  scraping.py  sources.py
app/models/: article.py  source.py
app/schemas/: article.py  source.py
app/services/: scraper.py
